--- a/app/src/main/res/layout/detailscardview.xml
+++ b/app/src/main/res/layout/detailscardview.xml
@@ -11,36 +11,40 @@
     android:layout_marginEnd="@dimen/size_5dp"
     android:layout_marginBottom="@dimen/size_15dp"
     android:background="@drawable/event_detail_cardview_background"
-    app:cardCornerRadius="@dimen/size_8dp"
-    app:cardElevation="@dimen/size_8dp">
+    app:cardCornerRadius="@dimen/_5sdp"
+    app:cardElevation="@dimen/_8sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/size_5dp">
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingTop="@dimen/_7sdp"
+        android:paddingEnd="@dimen/_7sdp"
+        android:paddingBottom="@dimen/_5sdp">
 
         <TextView
             android:id="@+id/event_title_text"
-            android:layout_width="@dimen/size_150dp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_12dp"
             android:fontFamily="@font/mulish_bold"
             android:text="@string/saras_birthday"
             android:textColor="@color/black_event_title"
-            android:textSize="@dimen/size_18sp"
+            android:textSize="@dimen/_15sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.03"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/quote_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_6sdp"
             android:fontFamily="@font/mulish_regular"
             android:text="@string/quote"
-            android:textSize="@dimen/size_14sp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/event_title_text"
             app:layout_constraintEnd_toStartOf="@+id/amount_text"
             app:layout_constraintHorizontal_bias="1.0"
@@ -54,7 +58,7 @@
             android:fontFamily="@font/mulish_bold"
             android:text="@string/_2500"
             android:textColor="@color/dark_blue_amount"
-            android:textSize="@dimen/size_18sp"
+            android:textSize="@dimen/_14sdp"
             app:layout_constraintBottom_toBottomOf="@+id/quote_text_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -65,11 +69,11 @@
             android:id="@+id/code_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_2dp"
+            android:layout_marginTop="@dimen/_2sdp"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/ca4215254265"
             android:textColor="@color/blue_event_id"
-            android:textSize="@dimen/size_18sp"
+            android:textSize="@dimen/_13sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -79,12 +83,12 @@
 
         <TextView
             android:id="@+id/event_type_text"
-            android:layout_width="@dimen/size_150dp"
+            android:layout_width="@dimen/_110sdp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
-            android:paddingTop="@dimen/size_2dp"
+            android:paddingTop="@dimen/_2sdp"
             android:text="@string/fork_amp_spoon_catering"
-            android:textSize="@dimen/size_15sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -97,8 +101,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/cut_off_date_background"
-            android:padding="@dimen/size_2dp"
-            android:paddingStart="@dimen/size_5dp"
+            android:padding="@dimen/_2sdp"
+            android:paddingStart="@dimen/_4sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/amount_text"
             app:layout_constraintHorizontal_bias="1.0"
@@ -113,11 +117,13 @@
                 android:fontFamily="@font/mulish_regular"
                 android:text="@string/bid_cut_off"
                 android:textColor="@color/dark_blue_amount"
-                android:textSize="@dimen/size_14sp"
+                android:textSize="@dimen/_11sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/cutoff_month_text"
@@ -126,7 +132,7 @@
                 android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/mar"
                 android:textColor="@color/black"
-                android:textSize="@dimen/size_16sp"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -136,10 +142,10 @@
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="@style/CircularDeterminateProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_8dp"
-                android:layout_marginEnd="@dimen/size_5dp"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_6sdp"
+                android:layout_marginEnd="@dimen/_3sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cutoff_month_text"
@@ -153,6 +159,7 @@
                 android:text=""
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/black"
+                android:textSize="@dimen/_10sdp"
                 app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                 app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                 app:layout_constraintStart_toStartOf="@+id/progress_bar"
@@ -165,7 +172,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/mulish_regular"
             android:text="@string/event_date"
-            android:textSize="@dimen/size_15sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.03"
@@ -179,7 +186,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/mulish_regular"
             android:text="@string/service_date"
-            android:textSize="@dimen/size_15sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.15"
@@ -194,7 +201,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/aug_26"
             android:textColor="@color/elephant_black"
-            android:textSize="@dimen/size_16sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/event_date_tx"
             app:layout_constraintHorizontal_bias="0.0"
@@ -209,7 +216,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/_12_aug"
             android:textColor="@color/elephant_black"
-            android:textSize="@dimen/size_16sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintHorizontal_bias="0.0"
@@ -224,7 +231,7 @@
             android:fontFamily="@font/mulish_medium"
             android:text="@string/change_in_mind"
             android:textColor="@color/blue"
-            android:textSize="@dimen/size_14sp"
+            android:textSize="@dimen/_11sdp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/quote_status"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
@@ -243,7 +250,7 @@
             android:text="@string/order_details"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/size_15sp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/service_date"
             app:layout_constraintHorizontal_bias="0.0"
@@ -253,10 +260,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="@dimen/size_35dp"
+            android:layout_width="@dimen/_25sdp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/size_25dp"
+            android:layout_marginTop="@dimen/_21sdp"
             android:src="@drawable/view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -269,8 +276,8 @@
 
         <ImageView
             android:id="@+id/like_imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             app:layout_constraintBottom_toBottomOf="@+id/quote_status"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
             app:layout_constraintTop_toTopOf="@+id/quote_status"
@@ -280,9 +287,9 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/unlike_imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/size_8dp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:padding="@dimen/_6sdp"
             android:src="@drawable/reject_bid_circle"
             app:layout_constraintBottom_toBottomOf="@+id/quote_status"
             app:layout_constraintEnd_toStartOf="@+id/like_imageView"
@@ -294,15 +301,15 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_start_service"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/size_35dp"
+            android:layout_height="@dimen/_27sdp"
             android:background="@drawable/custom_button_corner_ok"
             android:fontFamily="@font/mulish_semi_bold"
-            android:paddingStart="@dimen/size_10dp"
-            android:paddingEnd="@dimen/size_10dp"
-            android:textAllCaps="false"
+            android:paddingStart="@dimen/_8sdp"
+            android:paddingEnd="@dimen/_8sdp"
             android:text="@string/start_service"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/size_12sp"
+            android:textSize="@dimen/_10sdp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/quote_status"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
