--- a/app/src/main/res/drawable-v24/ic_baseline_keyboard_arrow_down_24.xml
+++ b/app/src/main/res/drawable-v24/ic_baseline_keyboard_arrow_down_24.xml
@@ -1,5 +1,5 @@
-<vector android:height="@dimen/size_30dp" android:tint="@color/blue_spinner_drop_down"
+<vector android:height="@dimen/_23sdp" android:tint="@color/blue_spinner_drop_down"
     android:viewportHeight="22" android:viewportWidth="22"
-    android:width="@dimen/size_30dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="@dimen/_23sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z"/>
 </vector>
