--- a/app/src/main/res/drawable/arrow_back.xml
+++ b/app/src/main/res/drawable/arrow_back.xml
@@ -1,5 +1,5 @@
-<vector android:height="@dimen/size_24dp" android:tint="@color/theme_header_blue"
+<vector android:height="@dimen/_18sdp" android:tint="@color/white"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="@dimen/size_24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="@dimen/_18sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M17.77,3.77l-1.77,-1.77l-10,10l10,10l1.77,-1.77l-8.23,-8.23z"/>
 </vector>
