--- a/app/src/main/res/drawable/arrow_forward_20.xml
+++ b/app/src/main/res/drawable/arrow_forward_20.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/size_40dp"
-    android:height="@dimen/size_40dp"
+    android:width="@dimen/_38sdp"
+    android:height="@dimen/_38sdp"
     android:autoMirrored="true"
     android:tint="@color/white"
     android:viewportWidth="20"
