--- a/app/src/main/res/drawable/circle_fade_35.xml
+++ b/app/src/main/res/drawable/circle_fade_35.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/size_35dp"
-    android:height="@dimen/size_35dp"
+    android:width="@dimen/_22sdp"
+    android:height="@dimen/_22sdp"
     android:tint="@color/day_blue"
     android:viewportWidth="24"
     android:viewportHeight="24">
