--- a/app/src/main/res/drawable/custom_button_corner_cancel.xml
+++ b/app/src/main/res/drawable/custom_button_corner_cancel.xml
@@ -3,8 +3,6 @@
     android:shape="rectangle">
 
     <solid android:color="@color/gray" />
-    <corners android:radius="@dimen/size_12dp" />
-    <stroke
-        android:width="@dimen/size_1dp"
-        android:color="@color/gray" />
+    <corners android:radius="@dimen/_8sdp" />
+
 </shape>
