--- a/app/src/main/res/drawable/custom_button_corner_ok.xml
+++ b/app/src/main/res/drawable/custom_button_corner_ok.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/pairing_theme"/>
-    <corners android:radius="@dimen/size_10dp" />
+    <corners android:radius="@dimen/_8sdp" />
     <stroke
-        android:width="@dimen/size_1dp"
-        android:color="@color/buttoncolor" />
+        android:width="@dimen/_1sdp"
+        android:color="@color/pairing_theme" />
 </shape>
