--- a/app/src/main/res/drawable/week_selector.xml
+++ b/app/src/main/res/drawable/week_selector.xml
@@ -4,21 +4,21 @@
     <item>
         <shape>
             <corners
-                android:bottomLeftRadius="@dimen/size_10dp"
-                android:topLeftRadius="@dimen/size_10dp" />
+                android:bottomLeftRadius="@dimen/_8sdp"
+                android:topLeftRadius="@dimen/_8sdp" />
             <stroke
-                android:width="@dimen/size_2dp"
+                android:width="@dimen/_2sdp"
                 android:color="@color/blue_week_selection_border" />
         </shape>
     </item><!-- Body -->
     <item
-        android:bottom="@dimen/size_2dp"
-        android:left="@dimen/size_2dp"
-        android:top="@dimen/size_2dp">
+        android:bottom="@dimen/_2sdp"
+        android:left="@dimen/_2sdp"
+        android:top="@dimen/_2sdp">
         <shape>
             <corners
-                android:bottomLeftRadius="@dimen/size_20dp"
-                android:topLeftRadius="@dimen/size_20dp" />
+                android:bottomLeftRadius="@dimen/_18sdp"
+                android:topLeftRadius="@dimen/_18sdp" />
             <solid android:color="@color/blue_week_selection" />
         </shape>
     </item>
