--- a/app/src/main/res/layout/deselected_dialog_listview.xml
+++ b/app/src/main/res/layout/deselected_dialog_listview.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/size_5dp">
+    android:padding="@dimen/_3sdp">
 
     <TextView
         android:id="@+id/date_tx"
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_16sp"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,10 +19,10 @@
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_70dp"
+        android:layout_marginStart="@dimen/_66sdp"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_16sp"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintStart_toEndOf="@+id/date_tx"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_16sp"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_tx" />
 
@@ -40,10 +40,10 @@
         android:id="@+id/branch_tx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_30dp"
+        android:layout_marginStart="@dimen/_28sdp"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_16sp"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintStart_toEndOf="@+id/slots_tx"
         app:layout_constraintTop_toBottomOf="@+id/event_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
