--- a/app/src/main/res/layout/events_card_view.xml
+++ b/app/src/main/res/layout/events_card_view.xml
@@ -3,14 +3,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/action_card_view_layout"
-    android:layout_width="@dimen/size_90dp"
-    android:layout_height="@dimen/size_80dp"
-    android:layout_marginTop="@dimen/size_10dp"
-    android:layout_marginStart="@dimen/size_2dp"
-    android:layout_marginEnd="@dimen/size_18dp"
+    android:layout_width="@dimen/_71sdp"
+    android:layout_height="@dimen/_61sdp"
+    android:layout_marginTop="@dimen/_3sdp"
+    android:layout_marginEnd="@dimen/_8sdp"
     android:background="@drawable/corner_radius_background_modify_slots"
     android:backgroundTint="@color/title_background_blue"
-    android:paddingTop="@dimen/size_8dp">
+    android:paddingTop="@dimen/_8sdp">
 
     <TextView
         android:id="@+id/number_text"
@@ -20,7 +19,7 @@
         android:gravity="center"
         android:text="@string/_4"
         android:textColor="@color/light_blue_service_count"
-        android:textSize="@dimen/size_30sp"
+        android:textSize="@dimen/_18sdp"
         app:layout_constraintBottom_toTopOf="@+id/title_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,7 @@
         android:gravity="center"
         android:text="@string/active"
         android:textColor="@color/white"
-        android:textSize="@dimen/size_16sp"
+        android:textSize="@dimen/_13sdp"
         app:layout_constraintTop_toBottomOf="@+id/number_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
