--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -50,7 +50,7 @@
                         <LinearLayout
                             android:id="@+id/myEvents_layout"
                             android:layout_width="match_parent"
-                            android:layout_height="265dp"
+                            android:layout_height="@dimen/_210sdp"
                             android:background="@drawable/panel"
                             android:orientation="vertical"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -60,56 +60,60 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/size_20dp"
-                                android:layout_marginTop="@dimen/size_52dp"
+                                android:layout_marginStart="@dimen/_16sdp"
+                                android:layout_marginTop="@dimen/_42sdp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:text="@string/event_overview"
                                 android:textColor="@color/white"
-                                android:textSize="@dimen/size_20sp" />
+                                android:textSize="@dimen/_14sdp" />
 
-                            <LinearLayout
+                            <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/service_count_layout"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:weightSum="3">
+                                android:layout_marginTop="@dimen/_18sdp"
+                                android:orientation="horizontal">
 
                                 <ImageView
                                     android:id="@+id/left_dtn"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="@dimen/_20sdp"
+                                    android:layout_height="@dimen/_20sdp"
                                     android:layout_gravity="center"
-                                    android:layout_marginStart="@dimen/size_22dp"
-                                    android:layout_marginTop="@dimen/size_10dp"
-                                    android:layout_marginEnd="@dimen/size_5dp"
-                                    android:layout_weight=".5"
+                                    android:layout_marginStart="@dimen/_16sdp"
+                                    app:layout_constraintBottom_toBottomOf="@+id/events_recycler_view"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.0"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="@+id/events_recycler_view"
                                     app:srcCompat="@drawable/arrow_left_20" />
 
                                 <androidx.recyclerview.widget.RecyclerView
                                     android:id="@+id/events_recycler_view"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/size_12dp"
-                                    android:layout_marginTop="@dimen/size_20dp"
-                                    android:layout_marginBottom="@dimen/size_20dp"
-                                    android:layout_weight="2"
+                                    android:layout_marginStart="@dimen/_3sdp"
                                     android:orientation="horizontal"
-                                    android:paddingTop="@dimen/size_8dp"
-                                    android:paddingEnd="@dimen/size_5dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toStartOf="@+id/right_btn"
+                                    app:layout_constraintHorizontal_bias="0.0"
+                                    app:layout_constraintStart_toEndOf="@+id/left_dtn"
+                                    app:layout_constraintTop_toTopOf="parent"
                                     tools:listitem="@layout/events_card_view" />
 
                                 <ImageView
                                     android:id="@+id/right_btn"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="@dimen/_20sdp"
+                                    android:layout_height="@dimen/_20sdp"
                                     android:layout_gravity="center"
-                                    android:layout_marginStart="@dimen/size_5dp"
-                                    android:layout_marginTop="@dimen/size_10dp"
-                                    android:layout_marginEnd="@dimen/size_20dp"
-                                    android:layout_weight=".5"
+                                    android:layout_marginEnd="@dimen/_16sdp"
+                                    app:layout_constraintBottom_toBottomOf="@+id/events_recycler_view"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="1.0"
+                                    app:layout_constraintStart_toEndOf="@+id/events_recycler_view"
+                                    app:layout_constraintTop_toTopOf="@+id/events_recycler_view"
                                     app:srcCompat="@drawable/arrow_forward_20" />
 
-                            </LinearLayout>
+                            </androidx.constraintlayout.widget.ConstraintLayout>
 
                         </LinearLayout>
 
@@ -117,9 +121,9 @@
                             android:id="@+id/spinner_action"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_230dp"
-                            app:cardCornerRadius="@dimen/size_20dp"
-                            app:cardElevation="@dimen/size_5dp"
+                            android:layout_marginTop="@dimen/_160sdp"
+                            app:cardCornerRadius="@dimen/_17sdp"
+                            app:cardElevation="@dimen/_3sdp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="@id/myEvents_layout">
@@ -136,8 +140,8 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/size_10dp"
-                                    android:layout_marginEnd="@dimen/size_10dp"
+                                    android:layout_marginStart="@dimen/_8sdp"
+                                    android:layout_marginEnd="@dimen/_8sdp"
                                     android:background="@drawable/shapes">
 
                                     <Spinner
@@ -147,15 +151,15 @@
                                         android:background="@drawable/spinner"
                                         android:gravity="center"
                                         android:spinnerMode="dropdown"
-                                        android:textSize="@dimen/size_18sp" />
+                                        android:textSize="@dimen/_16sdp" />
                                 </LinearLayout>
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/size_10dp"
-                                    android:layout_marginTop="@dimen/size_20dp"
-                                    android:layout_marginEnd="@dimen/size_10dp"
+                                    android:layout_marginStart="@dimen/_8sdp"
+                                    android:layout_marginTop="@dimen/_18sdp"
+                                    android:layout_marginEnd="@dimen/_8sdp"
                                     android:background="@drawable/shapes">
 
                                     <Spinner
@@ -165,14 +169,14 @@
                                         android:autofillHints="All Services"
                                         android:background="@drawable/spinner"
                                         android:spinnerMode="dropdown"
-                                        android:textSize="@dimen/size_18sp" />
+                                        android:textSize="@dimen/_16sdp" />
                                 </LinearLayout>
 
                                 <LinearLayout
                                     android:id="@+id/container_main"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="@dimen/size_10dp"
+                                    android:layout_marginTop="@dimen/_8sdp"
                                     android:orientation="vertical"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -183,10 +187,10 @@
                                         android:id="@+id/action_and_status_layout"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginStart="@dimen/size_12dp"
-                                        android:layout_marginTop="@dimen/size_20dp"
-                                        android:layout_marginEnd="@dimen/size_12dp"
-                                        android:layout_marginBottom="@dimen/size_25dp"
+                                        android:layout_marginStart="@dimen/_10sdp"
+                                        android:layout_marginTop="@dimen/_14sdp"
+                                        android:layout_marginEnd="@dimen/_10sdp"
+                                        android:layout_marginBottom="@dimen/_23sdp"
                                         android:descendantFocusability="blocksDescendants">
 
                                     </androidx.fragment.app.FragmentContainerView>
@@ -198,9 +202,9 @@
 
                         <ImageView
                             android:id="@+id/calander"
-                            android:layout_width="@dimen/size_60dp"
-                            android:layout_height="@dimen/size_60dp"
-                            android:layout_marginTop="@dimen/size_32dp"
+                            android:layout_width="@dimen/_45sdp"
+                            android:layout_height="@dimen/_45sdp"
+                            android:layout_marginTop="@dimen/_30sdp"
                             android:src="@drawable/calendar_icon"
                             app:layout_constraintHorizontal_bias=".93"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -209,10 +213,10 @@
 
                         <androidx.appcompat.widget.Toolbar
                             android:id="@+id/tool_bar"
-                            android:layout_width="@dimen/size_50dp"
-                            android:layout_height="@dimen/size_40dp"
-                            android:layout_marginStart="@dimen/size_7dp"
-                            android:layout_marginTop="@dimen/size_8dp"
+                            android:layout_width="@dimen/_40sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_marginStart="@dimen/_4sdp"
+                            android:layout_marginTop="@dimen/_5sdp"
                             android:background="#00EAE7E7"
                             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -228,7 +232,7 @@
                             android:fontFamily="@font/mulish_semi_bold"
                             android:text="@string/event_overview"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="@+id/tool_bar"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -239,12 +243,12 @@
                             android:id="@+id/calander_tx"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/size_5dp"
+                            android:layout_marginEnd="@dimen/_3sdp"
                             android:fontFamily="@font/mulish_semi_bold"
                             android:text="@string/calendar_view"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/size_15sp"
+                            android:textSize="@dimen/_11sdp"
                             app:layout_constraintBottom_toBottomOf="@+id/calander"
                             app:layout_constraintEnd_toStartOf="@+id/calander"
                             app:layout_constraintTop_toTopOf="@+id/calander" />
@@ -253,12 +257,12 @@
                             android:id="@+id/upcoming_event"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/size_20dp"
-                            android:layout_marginTop="@dimen/size_15dp"
+                            android:layout_marginStart="@dimen/_18sdp"
+                            android:layout_marginTop="@dimen/_13sdp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/upcoming_event"
                             android:textColor="#52A1FC"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/spinner_action" />
 
@@ -266,8 +270,8 @@
                             android:id="@+id/banner1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="25dp"
-                            android:layout_marginTop="@dimen/size_18dp"
+                            android:layout_marginStart="@dimen/_23sdp"
+                            android:layout_marginTop="@dimen/_15sdp"
                             android:src="@drawable/banner"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/upcoming_event" />
@@ -276,7 +280,7 @@
                             android:id="@+id/banner2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="@dimen/size_80dp"
+                            android:layout_marginRight="@dimen/_70sdp"
                             android:src="@drawable/banner_2"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/upcoming_event" />
