--- a/app/src/main/res/layout/fragment_time_slots.xml
+++ b/app/src/main/res/layout/fragment_time_slots.xml
@@ -13,23 +13,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/size_18dp"
-        android:layout_marginEnd="@dimen/size_18dp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
         android:orientation="vertical"
         tools:context=".ui.timeslot.TimeSlotsFragment">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_45dp"
+            android:layout_height="@dimen/_35sdp"
             android:background="@drawable/corner_radius_background"
             android:backgroundTint="@color/light_gray_background">
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_height="@dimen/_29sdp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/size_5dp"
+                android:layout_margin="@dimen/_3sdp"
+                android:textSize="@dimen/_13sdp"
                 app:tabBackground="@drawable/tab_selector"
                 app:tabGravity="fill"
                 app:tabIndicatorAnimationMode="elastic"
@@ -44,7 +45,7 @@
             android:id="@+id/expandable_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_25dp"
+            android:layout_marginTop="@dimen/_23sdp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/switch_btn" />
