--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,4 +55,6 @@
     <color name="theme_color">#556CD4</color>
     <color name="gray_text">#707070</color>
 
+    <color name="quote_details_check_black">#B5232323</color>
+
 </resources>
